--- a/template/OPS/css/horizontal.css
+++ b/template/OPS/css/horizontal.css
@@ -345,6 +345,5 @@ div.jzm48 { max-width: 48em; }
 div.jzm49 { max-width: 49em; }
 div.jzm50 { max-width: 50em; }
 
-/* 禁則調整用 文字間の全角スペースを行末で表示しないor追い出し */
-span.fullsp { padding-left:.5em; }
+/* 禁則調整用 文字間の全角スペースを追い出し */
 span.withsp { padding-right:1em; display:inline-block; }
