--- a/template/OPS/toc.ncx.vm
+++ b/template/OPS/toc.ncx.vm
@@ -23,11 +23,15 @@
 #foreach(${chapter} in ${chapters})
 #if ($chapter.ChapterName)
 #set($idx=$idx+1)
-	<navPoint id="toc${chapter.SectionId}" playOrder="${idx}">
+	<navPoint id="toc${idx}" playOrder="${idx}">
 		<navLabel>
 			<text>${chapter.ChapterName}</text>
 		</navLabel>
+#if ($chapter.ChapterId)
+		<content src="xhtml/${chapter.SectionId}.xhtml#${chapter.ChapterId}"/>
+#else
 		<content src="xhtml/${chapter.SectionId}.xhtml"/>
+#end
 	</navPoint>
 #end
 #end
