--- a/template/OPS/xhtml/xhtml_nav.vm
+++ b/template/OPS/xhtml/xhtml_nav.vm
@@ -33,7 +33,12 @@ li a {text-decoration:none; border-bottom-width:1px;border-bottom-style:solid;pa
 #end
 #foreach(${chapter} in ${chapters})
 #if ($chapter.ChapterName)
-			<li class="chapter" id="toc${chapter.SectionId}"><a href="${chapter.SectionId}.xhtml">${chapter.ChapterName}</a></li>
+#set($idx=$idx+1)
+#if ($chapter.ChapterId)
+			<li class="chapter" id="toc${idx}"><a href="${chapter.SectionId}.xhtml#${chapter.ChapterId}">${chapter.ChapterName}</a></li>
+#else
+			<li class="chapter" id="toc${idx}"><a href="${chapter.SectionId}.xhtml">${chapter.ChapterName}</a></li>
+#end
 #end
 #end
 		</ol>
