--- a/template/OPS/css/vertical.css
+++ b/template/OPS/css/vertical.css
@@ -7,10 +7,12 @@ p {
 img {
 	max-width: 100%;
 	max-height: 100%;
+	background-color: white;
 }
 span.img {
 	display: inline-block;
 	vertical-align: middle;
+	background-color: white;
 }
 
 :link { color: #00C; background: transparent; }
@@ -135,7 +137,7 @@ span.underline, span.double_underline, span.dotted_underline, span.dashed_underl
 	padding-right: 1px;
 }
 span.underline {
-	border-right-style: solid
+	border-right-style: solid;
 }
 span.double_underline {
 	border-right-width: 3px;
@@ -169,6 +171,7 @@ span.left_underline {
 .font-3 { font-size: 70%; }
 .font-4 { font-size: 60%; }
 .font-5 { font-size: 50%; }
+.font-6 { font-size: 45%; }
 .kogaki { font-size: 70%; }
 
 /* 縦中横 */
@@ -179,6 +182,23 @@ span.tcy {
 	text-combine: horizontal;
 	-webkit-text-combine: horizontal;
 	-epub-text-combine: horizontal;
+}
+
+/** 横組み */
+span.swr {
+	display: inline-block;
+}
+.swr {
+	text-orientation: sideways-right;
+	-webkit-text-orientation: sideways-right;
+	-epub-text-orientation: sideways-right;
+}
+
+/* 横書き */
+div.yoko {
+	writing-mode: horizontal-tb;
+	-webkit-writing-mode: horizontal-tb;
+	-epub-writing-mode: horizontal-tb;
 }
 
 /* 行右小書き 上付き小文字 */
@@ -195,7 +215,7 @@ span.tcy {
 }
 
 /* 中央揃え */
-div.center, div.center p { text-align: center;}
+div.center, div.center p { text-align: center; }
 
 /* 字下げ */
 div.top1 { margin-top: 1em; }
