--- a/template/OPS/css/vertical.css
+++ b/template/OPS/css/vertical.css
@@ -135,7 +135,7 @@ span.underline, span.double_underline, span.dotted_underline, span.dashed_underl
 	padding-right: 1px;
 }
 span.underline {
-	border-right-style: solid
+	border-right-style: solid;
 }
 span.double_underline {
 	border-right-width: 3px;
@@ -162,12 +162,14 @@ span.left_underline {
 .font3 { font-size: 130%; }
 .font4 { font-size: 140%; }
 .font5 { font-size: 150%; }
+.font6 { font-size: 160%; }
 /* 文字サイズ 小 */
 .font-1 { font-size: 90%; }
-.font-2 { font-size: 80%; }
-.font-3 { font-size: 70%; }
-.font-4 { font-size: 60%; }
-.font-5 { font-size: 50%; }
+.font-2 { font-size: 83%; }
+.font-3 { font-size: 77%; }
+.font-4 { font-size: 70%; }
+.font-5 { font-size: 66%; }
+.font-6 { font-size: 62%; }
 .kogaki { font-size: 70%; }
 
 /* 縦中横 */
@@ -194,7 +196,7 @@ span.tcy {
 }
 
 /* 中央揃え */
-div.center, div.center p { text-align: center;}
+div.center, div.center p { text-align: center; }
 
 /* 字下げ */
 div.top1 { margin-top: 1em; }
