--- a/template/OPS/css/vertical_middle.css
+++ b/template/OPS/css/vertical_middle.css
@@ -32,14 +32,21 @@ body {
 	height:100%;
 }
 
-/* 左右中央 */
-table.middle {
+table {
 	width:100%;
 	height:100%;
 }
-table.middle td {
+table td {
 	width:100%;
 	height:100%;
 	display: table-cell;
+}
+
+/* 左右中央 */
+table.middle td {
 	vertical-align: middle;
+}
+/* ページ左 */
+table.bottom td {
+	vertical-align: bottom;
 }
