--- a/template/OPS/css/vertical_middle.css
+++ b/template/OPS/css/vertical_middle.css
@@ -27,7 +27,7 @@ body {
 	color: #000;
 	font-size: 1em;
 	line-height: 1.75;
-	vertical-align: baseline;
+	vertical-align: middle;
 	width:100%;
 	height:100%;
 }
