jar起動時の引数のファイルを起動時に変換 Windows用exeラッパーの作成 (「送る」で起動して変換 ※複数起動) kindlegenがあったらKindle向け処理(表紙jpegと画像なら全画面)

--- a/template/OPS/package.vm
+++ b/template/OPS/package.vm
@@ -15,6 +15,10 @@
 #if (${bookInfo.InsertCoverPage})
 		<meta name="cover" content="img${coverImage.Id}"/>
 #end
+#if (${kindle} && ${bookInfo.ImageOnly})
+		<meta content="true" name="fixed-layout"/>
+		<meta content="comic" name="book-type"/>
+#end
 	</metadata>
 	<manifest>
 #if (${bookInfo.Vertical})
