--- a/template/OPS/xhtml/xhtml_header.vm
+++ b/template/OPS/xhtml/xhtml_header.vm
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:lang="ja" lang="ja">
 <head>
-#if (${bookInfo.Vertical})
+#if (${bookInfo.Vertical} && !(${kindle} && ${bookInfo.ImageOnly}))
 #if (${sectionInfo.ImagePage})
 	<link rel="stylesheet" type="text/css" href="../css/vertical_image.css"/>
 #elseif (${sectionInfo.Middle} || ${sectionInfo.Bottom})
