--- a/template/OPS/toc.ncx.vm
+++ b/template/OPS/toc.ncx.vm
@@ -7,7 +7,7 @@
 <meta name="dtb:maxPageNumber" content="0"/>
 </head>
 <docTitle>
-	<text>${bookInfo.Title}</text>
+	<text>${title}</text>
 </docTitle>
 <navMap>
 #set($idx=0)
