--- a/template/OPS/xhtml/xhtml_nav.vm
+++ b/template/OPS/xhtml/xhtml_nav.vm
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja" lang="ja">
 <head>
-<title>${bookInfo.Title}</title>
+<title>${title}</title>
 <style type="text/css">
 #if (${bookInfo.TocVertical})
 @page {	margin:.5em .5em 0 0; }
@@ -17,6 +17,12 @@ li {padding:0 .5em 0 0;}
 ol ol li {padding:0 .25em 0 0;}
 ol ol ol li {padding:0;}
 li a {text-decoration:none; border-right-width:1px;border-right-style:solid;padding-right: 1px;}
+.tcy span {
+	width: 1em;
+	text-combine: horizontal;
+	-webkit-text-combine: horizontal;
+	-epub-text-combine: horizontal;
+}
 #else
 @page {	margin:.5em 0 0 .5em; }
 h1 {font-size:1.5em;text-align:center;}
@@ -39,16 +45,10 @@ li a {text-decoration:none; border-bottom-width:1px;border-bottom-style:solid;pa
 #foreach(${chapter} in ${chapters})
 #if ($chapter.ChapterName)
 #set($idx=$idx+1)
-#foreach(${start} in ${chapter.LevelStart})
-		<ol>
-#end
 #if ($chapter.ChapterId)
 			<li class="chapter" id="toc${idx}"><a href="${chapter.SectionId}.xhtml#${chapter.ChapterId}">${chapter.ChapterName}</a></li>
 #else
 			<li class="chapter" id="toc${idx}"><a href="${chapter.SectionId}.xhtml">${chapter.ChapterName}</a></li>
-#end
-#foreach(${end} in ${chapter.LevelEnd})
-		</ol>
 #end
 #end
 #end
