--- a/template/OPS/css/horizontal.css
+++ b/template/OPS/css/horizontal.css
@@ -5,13 +5,11 @@
 p {
 	text-align: justify;
 }
-img {
-	max-width: 100%;
-	max-height: 100%;
-}
 span.img {
 	/*clear: both;*/
 	display: inline-block;
+	max-width: 100%;
+	max-height: 100%;
 }
 span.img.ft {
 	/*clear: both;*/
@@ -24,6 +22,12 @@ span.img.fb {
 	display: inline;
 	float: right;
 	padding-left: 0.5em;
+}
+span.img.fw {
+	width: 100%;
+}
+span.img.fh {
+	height: 100%;
 }
 
 :link { color: #00C; background: transparent; }
