--- a/template/OPS/css_custom/horizontal_font_reader.css
+++ b/template/OPS/css_custom/horizontal_font_reader.css
@@ -1,8 +1,8 @@
 @charset "utf-8";
 
-/** 横書きフォント変更 Reader用
- horizontal_font.css と置き換えて利用
- READER/fonts/ の下にフォントファイルをおいてsrc:urlのフォントファイル名を変更する
+/** 横書きフォント変更 Reader T1/G1/T2用
+ ファイル名を horizontal_font.css に変更すると有効
+ READER/fonts/ の下にフォントファイルをコピーしてsrc:urlのフォントをコピーしたファイル名に変更
  フォントファイルが無い場合は標準フォントが利用される */
 
 @font-face {
