--- a/template/OPS/package.vm
+++ b/template/OPS/package.vm
@@ -15,9 +15,11 @@
 #if (${bookInfo.InsertCoverPage})
 		<meta name="cover" content="img${coverImage.Id}"/>
 #end
-#if (${kindle} && ${bookInfo.ImageOnly})
-		<meta name="fixed-layout"  content="true"/>
+#if (${bookInfo.ImageOnly})
+		<meta name="fixed-layout" content="true"/>
+#if (${kindle})
 		<meta name="book-type" content="comic"/>
+#end
 #end
 	</metadata>
 	<manifest>
