--- a/template/OPS/css/vertical_image.css
+++ b/template/OPS/css/vertical_image.css
@@ -8,9 +8,9 @@
 }
 
 html {
-	writing-mode: vertical-rl;
-	-webkit-writing-mode: vertical-rl;
-	-epub-writing-mode: vertical-rl;
+	writing-mode: horizontal-tb;
+	-webkit-writing-mode: horizontal-tb;
+	-epub-writing-mode: horizontal-tb;
 	margin: 0;
 	padding: 0;
 	width: 100%;
@@ -22,40 +22,24 @@ body {
 	padding: 0;
 	width: 100%;
 	height: 100%;
+	text-align: center;
 }
 
 /* ページ内 画像は縮小のみ */
-body.fit, body.fit_h {
-	display: table;
-}
 body .img {
 	width: 100%;
 	height: 100%;
-}
-body.fit .img,
-body.fit_h .img {
-	display: table-cell;
-	vertical-align: middle;
-}
-body.fit img {
-	max-width: 100%;
-	max-height: 100%;
-	display: block;
-}
-
-/* 表紙画像は小さければ拡大 */
-body.cover img {
-	width: 100%;
-	height: auto;
 }
 
 /* 幅を合わせる */
 body.fit_w img {
 	width: 100%;
+	min-width: 100%;
 	height: auto;
 }
 /* 高さを合わせる */
 body.fit_h img {
 	width: auto;
 	height: 100%;
+	min-height: 100%;
 }
