--- a/template/OPS/css/horizontal.css
+++ b/template/OPS/css/horizontal.css
@@ -206,34 +206,64 @@ span.left_underline {
 div.center, div.center p { text-align: center; }
 
 /* 字下げ */
-div.top1 { margin-left: 1em; }
-div.top2 { margin-left: 2em; }
-div.top3 { margin-left: 3em; }
-div.top4 { margin-left: 4em; }
-div.top5 { margin-left: 5em; }
-div.top6 { margin-left: 6em; }
-div.top7 { margin-left: 7em; }
-div.top8 { margin-left: 8em; }
-div.top9 { margin-left: 9em; }
-div.top10 { margin-left: 10em; }
-div.top11 { margin-left: 11em; }
-div.top12 { margin-left: 12em; }
-div.top13 { margin-left: 13em; }
-div.top14 { margin-left: 14em; }
-div.top15 { margin-left: 15em; }
-div.top16 { margin-left: 16em; }
-div.top17 { margin-left: 17em; }
-div.top18 { margin-left: 18em; }
-div.top19 { margin-left: 19em; }
-div.top20 { margin-left: 20em; }
-div.top21 { margin-left: 21em; }
-div.top22 { margin-left: 22em; }
-div.top23 { margin-left: 23em; }
-div.top24 { margin-left: 24em; }
-div.top25 { margin-left: 25em; }
+div.pt1 { margin-left: 1em; }
+div.pt2 { margin-left: 2em; }
+div.pt3 { margin-left: 3em; }
+div.pt4 { margin-left: 4em; }
+div.pt5 { margin-left: 5em; }
+div.pt6 { margin-left: 6em; }
+div.pt7 { margin-left: 7em; }
+div.pt8 { margin-left: 8em; }
+div.pt9 { margin-left: 9em; }
+div.pt10 { margin-left: 10em; }
+div.pt11 { margin-left: 11em; }
+div.pt12 { margin-left: 12em; }
+div.pt13 { margin-left: 13em; }
+div.pt14 { margin-left: 14em; }
+div.pt15 { margin-left: 15em; }
+div.pt16 { margin-left: 16em; }
+div.pt17 { margin-left: 17em; }
+div.pt18 { margin-left: 18em; }
+div.pt19 { margin-left: 19em; }
+div.pt20 { margin-left: 20em; }
+div.pt21 { margin-left: 21em; }
+div.pt22 { margin-left: 22em; }
+div.pt23 { margin-left: 23em; }
+div.pt24 { margin-left: 24em; }
+div.pt25 { margin-left: 25em; }
 
-/* 改行天付き、折り返して(.+?)字下げ → class="top{$1} idt-{$1}" */
-/* ここから(.+?)字下げ、折り返して(.+?)字下げ → class="top{$2} idt{$1-$2}" */
+/* 字上げ */
+div.pb1, div.pb1 p { margin-right: 1em; }
+div.pb2, div.pb2 p { margin-right: 2em; }
+div.pb3, div.pb3 p { margin-right: 3em; }
+div.pb4, div.pb4 p { margin-right: 4em; }
+div.pb5, div.pb5 p { margin-right: 5em; }
+div.pb6, div.pb6 p { margin-right: 6em; }
+div.pb7, div.pb7 p { margin-right: 7em; }
+div.pb8, div.pb8 p { margin-right: 8em; }
+div.pb9, div.pb9 p { margin-right: 9em; }
+div.pb10, div.pb10 p { margin-right: 10em; }
+div.pb11, div.pb11 p { margin-right: 11em; }
+div.pb12, div.pb12 p { margin-right: 12em; }
+div.pb13, div.pb13 p { margin-right: 13em; }
+div.pb14, div.pb14 p { margin-right: 14em; }
+div.pb15, div.pb15 p { margin-right: 15em; }
+div.pb16, div.pb16 p { margin-right: 16em; }
+div.pb17, div.pb17 p { margin-right: 17em; }
+div.pb18, div.pb18 p { margin-right: 18em; }
+div.pb19, div.pb19 p { margin-right: 19em; }
+div.pb20, div.pb20 p { margin-right: 20em; }
+div.pb21, div.pb21 p { margin-right: 21em; }
+div.pb22, div.pb22 p { margin-right: 22em; }
+div.pb23, div.pb23 p { margin-right: 23em; }
+div.pb24, div.pb24 p { margin-right: 24em; }
+div.pb25, div.pb25 p { margin-right: 25em; }
+
+/* 地付き */
+div.btm, div.btm p { text-align: right; }
+
+/* 改行天付き、折り返して(.+?)字下げ → class="pt{$1} idt-{$1}" */
+/* ここから(.+?)字下げ、折り返して(.+?)字下げ → class="pt{$2} idt{$1-$2}" */
 div.idt1 { text-indent: 1em; }
 div.idt2 { text-indent: 2em; }
 div.idt3 { text-indent: 3em; }
@@ -285,35 +315,7 @@ div.idt-23 { text-indent: -23em; }
 div.idt-24 { text-indent: -24em; }
 div.idt-25 { text-indent: -25em; }
 
-
-/* 地付き 地上げ */
-div.btm, div.btm p { text-align: right; margin-right: 0em; }
-div.btm1, div.btm1 p { text-align: right; margin-right: 1em; }
-div.btm2, div.btm2 p { text-align: right; margin-right: 2em; }
-div.btm3, div.btm3 p { text-align: right; margin-right: 3em; }
-div.btm4, div.btm4 p { text-align: right; margin-right: 4em; }
-div.btm5, div.btm5 p { text-align: right; margin-right: 5em; }
-div.btm6, div.btm6 p { text-align: right; margin-right: 6em; }
-div.btm7, div.btm7 p { text-align: right; margin-right: 7em; }
-div.btm8, div.btm8 p { text-align: right; margin-right: 8em; }
-div.btm9, div.btm9 p { text-align: right; margin-right: 9em; }
-div.btm10, div.btm10 p { text-align: right; margin-right: 10em; }
-div.btm11, div.btm11 p { text-align: right; margin-right: 11em; }
-div.btm12, div.btm12 p { text-align: right; margin-right: 12em; }
-div.btm13, div.btm13 p { text-align: right; margin-right: 13em; }
-div.btm14, div.btm14 p { text-align: right; margin-right: 14em; }
-div.btm15, div.btm15 p { text-align: right; margin-right: 15em; }
-div.btm16, div.btm16 p { text-align: right; margin-right: 16em; }
-div.btm17, div.btm17 p { text-align: right; margin-right: 17em; }
-div.btm18, div.btm18 p { text-align: right; margin-right: 18em; }
-div.btm19, div.btm19 p { text-align: right; margin-right: 19em; }
-div.btm20, div.btm20 p { text-align: right; margin-right: 20em; }
-div.btm21, div.btm21 p { text-align: right; margin-right: 21em; }
-div.btm22, div.btm22 p { text-align: right; margin-right: 22em; }
-div.btm23, div.btm23 p { text-align: right; margin-right: 23em; }
-div.btm24, div.btm24 p { text-align: right; margin-right: 24em; }
-div.btm25, div.btm25 p { text-align: right; margin-right: 25em; }
-
+/* 字詰め */
 div.jzm1 { max-width: 1em; }
 div.jzm2 { max-width: 2em; }
 div.jzm3 { max-width: 3em; }
@@ -364,13 +366,6 @@ div.jzm47 { max-width: 47em; }
 div.jzm48 { max-width: 48em; }
 div.jzm49 { max-width: 49em; }
 div.jzm50 { max-width: 50em; }
-
-div.pb1 { margin-right: 1em; }
-div.pb2 { margin-right: 2em; }
-div.pb3 { margin-right: 3em; }
-div.pb4 { margin-right: 4em; }
-div.pb5 { margin-right: 5em; }
-div.pb6 { margin-right: 6em; }
 
 /* 行内全角スペース調整用 */
 span.fullsp { padding-left:.5em; }
