--- a/template/OPS/css/vertical_image.css
+++ b/template/OPS/css/vertical_image.css
@@ -13,18 +13,15 @@ html {
 	-epub-writing-mode: horizontal-tb;
 	margin: 0;
 	padding: 0;
-	width: 100%;
-	height: 100%;
 }
 
 body {
 	margin: 0;
 	padding: 0;
-	width: 100%;
-	height: 100%;
+}
+body.fit_h {
 	text-align: center;
 }
-
 /* ページ内 画像は縮小のみ */
 body .img {
 	width: 100%;
