--- a/template/OPS/css/horizontal_font.css
+++ b/template/OPS/css/horizontal_font.css
@@ -1,6 +1,14 @@
 @charset "utf-8";
+@namespace "http://www.w3.org/1999/xhtml";
 
 /** 横書きフォント */
 body {
-	font-family: "ＭＳ 明朝", "MS Mincho", "ヒラギノ明朝 ProN W3", "HiraMinProN-W3", serif, sans-serif;
+font-family: "ＭＳ 明朝", "MS Mincho", "ヒラギノ明朝 ProN W3", "HiraMinProN-W3", serif, sans-serif;
 }
+
+.gtc, .b {
+font-family: 'ＭＳ ゴシック','MS Gothic',sans-serif;
+}
+
+.b, .gtc { font-weight: bold; }
+.i { font-style: italic; }
