--- a/template/OPS/css/vertical_font.css
+++ b/template/OPS/css/vertical_font.css
@@ -1,6 +1,13 @@
 @charset "utf-8";
+@namespace "http://www.w3.org/1999/xhtml";
 
 /** 縦書きフォント */
 body {
-	font-family: "@ＭＳ 明朝", "@MS Mincho", "ヒラギノ明朝 ProN W3", "HiraMinProN-W3", serif, sans-serif;
+font-family: "@ＭＳ 明朝", "@MS Mincho", "ヒラギノ明朝 ProN W3", "HiraMinProN-W3", serif, sans-serif;
 }
+.gtc, .b {
+font-family: '@ＭＳ ゴシック','@MS Gothic',sans-serif !important;
+}
+
+.b, .gtc { font-weight: bold; }
+.i { font-style: italic; }
