--- a/template/OPS/css_custom/horizontal_font_reader.css
+++ b/template/OPS/css_custom/horizontal_font_reader.css
@@ -1,4 +1,5 @@
 @charset "utf-8";
+@namespace "http://www.w3.org/1999/xhtml";
 
 /** 横書きフォント変更 Reader T1/G1/T2用
  ファイル名を horizontal_font.css に変更すると有効
@@ -6,9 +7,16 @@
  フォントファイルが無い場合は標準フォントが利用される */
 
 @font-face {
-	font-family: "CustomFont";
-	src: url(res:///ebook/fonts/../../mnt/sdcard/fonts/Dfpaburi.ttc);
+font-family: "CustomFont";
+src: url(res:///ebook/fonts/../../mnt/sdcard/fonts/Dfpaburi.ttc);
 }
 body {
-	font-family: "CustomFont", "ＭＳ 明朝", "MS Mincho", "ヒラギノ明朝 ProN W3", "HiraMinProN-W3", serif, sans-serif;
+font-family: "CustomFont", "ＭＳ 明朝", "MS Mincho", "ヒラギノ明朝 ProN W3", "HiraMinProN-W3", serif, sans-serif;
 }
+
+.gtc, .b {
+font-family: 'ＭＳ ゴシック','MS Gothic',sans-serif;
+}
+
+.b, .gtc { font-weight: bold; }
+.i { font-style: italic; }
