画像回り込み修正

--- a/template/OPS/css/vertical.css
+++ b/template/OPS/css/vertical.css
@@ -30,10 +30,10 @@ display: inline;
 float: right;
 padding-top: 0.5em;
 }
-span.img.fw {
+span.img.fw img {
 width: 100%;
 }
-span.img.fh {
+span.img.fh img {
 height: 100%;
 }
 
