ルビ内のエスケープ処理修正＋ID用spanをdivに変更

--- a/template/OPS/css/vertical.css
+++ b/template/OPS/css/vertical.css
@@ -11,6 +11,9 @@ margin: 0;
 a:active { color: #C00; background: transparent; }
 a:link img, a:visited img { border-style: none; }
 
+div.ib {
+	display: inline-block;
+}
 span.img {
 /*clear: both;*/
 display: inline-block;
